clusters/home/apps/sso/authentik/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "authentik.layertwo.dev"
    external-dns.alpha.kubernetes.io/target: "proxy-external.layertwo.dev"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: external
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`authentik.layertwo.dev`)
    kind: Rule
    services:
    - name: authentik-server
      port: 80
